# svg_video_py

./: README.md  TODO.md  pyproject.toml  render_pngs_to_video.py  requirements.txt
examples/: scrolling_titles.py
scrolling_titles/: scroll.py
svgvid/: render.py  scroll.py
tests/: test_svgvid.py
